--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
+    "@storybook/addon-designs": "^7.0.9",
     "@storybook/addon-docs": "^7.6.5",
     "@storybook/addon-essentials": "^7.6.5",
     "@storybook/addon-interactions": "^7.6.5",
@@ -100,7 +101,6 @@
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "storybook": "^7.6.5",
-    "storybook-addon-designs": "^6.3.1",
     "tailwindcss": "^3.3.3",
     "typescript": "5.0.4"
   }
