--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "ts-dedent": "^2.2.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.41.3",
+    "@netlify/plugin-nextjs": "^5.0.0-rc.4",
     "@storybook/addon-docs": "^8.0.0",
     "@storybook/addon-essentials": "^8.0.0",
     "@storybook/addon-interactions": "^8.0.0",
