--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "@storybook/test": "^7.6.5",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.7",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^4.0.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "link:.yalc/@webriq-pagebuilder/sanity-plugin-webriq-blog",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "link:.yalc/@webriq-pagebuilder/sanity-plugin-webriq-components",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "link:.yalc/@webriq-pagebuilder/sanity-plugin-webriq-forms",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "link:.yalc/@webriq-pagebuilder/sanity-plugin-webriq-payments",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^4.1.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^4.1.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^4.1.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^4.1.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^4.1.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^4.1.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^4.1.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^4.1.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^4.1.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^4.1.0-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^4.1.0-alpha.0",
     "axios": "^1.6.7",
     "braille": "^1.1.0",
     "clsx": "^2.0.0",
