--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
     "deepmerge": "^4.3.1",
+    "dotenv": "^16.4.5",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
