--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@sanity/types": "^3.17.0",
     "@sanity/ui": "^1.8.2",
     "@sanity/vision": "^3.17.0",
-    "@storybook/test": "^7.6.5",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^4.0.5",
@@ -87,6 +86,7 @@
     "@storybook/manager-api": "^8.0.0",
     "@storybook/nextjs": "^8.0.0",
     "@storybook/react": "^8.0.0",
+    "@storybook/test": "8.0.0",
     "@storybook/testing-library": "^0.2.2",
     "@storybook/theming": "^8.0.0",
     "@types/react": "^18.2.65",
