--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag",
+    "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag @webriq-pagebuilder/sanity-plugin-input-component-social-accounts@$ctag",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build-storybook-docs": "storybook build --docs",
@@ -30,18 +30,18 @@
     "@storybook/test": "^7.6.5",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^4.0.5",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^4.0.5",
-    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^3.7.1-rc.8",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^4.0.5",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^4.0.5",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^4.0.5",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^4.0.5",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^4.0.5",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^4.0.5",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^4.0.5",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^4.0.5",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^4.0.5",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^4.0.6-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^4.0.6-rc.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "clsx": "^2.0.0",
