--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,8 +33,8 @@ jobs:
         run: npx playwright test
         env:
           PLAYWRIGHT_TEST_BASE_URL: ${{ github.event.deployment_status.target_url }}
-          STUDIO_AUTOLOGIN_TOKEN_FOR_TESTING: ${{ env.STUDIO_AUTOLOGIN_TOKEN_FOR_TESTING }}
-          NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ env.NEXT_PUBLIC_SANITY_PROJECT_ID }}
+          STUDIO_AUTOLOGIN_TOKEN_FOR_TESTING: ${{ secrets.STUDIO_AUTOLOGIN_TOKEN_FOR_TESTING }}
+          NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_SANITY_PROJECT_ID }}
 
       - uses: actions/upload-artifact@v4
         if: failure()
