--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "scripts": {
     "build": "next build",
-    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
@@ -30,7 +29,6 @@
     "@sanity/types": "^3.17.0",
     "@sanity/ui": "^1.8.2",
     "@sanity/vision": "^3.17.0",
-    "@storybook/test": "^7.6.5",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^4.1.0",
@@ -51,7 +49,6 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
     "deepmerge": "^4.3.1",
-    "dotenv": "^16.4.5",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
@@ -81,6 +78,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.1.2",
     "@playwright/test": "^1.42.1",
+    "@storybook/addon-designs": "^8.0.0",
     "@storybook/addon-docs": "^8.0.0",
     "@storybook/addon-essentials": "^8.0.0",
     "@storybook/addon-interactions": "^8.0.0",
@@ -91,9 +89,9 @@
     "@storybook/manager-api": "^8.0.0",
     "@storybook/nextjs": "^8.0.0",
     "@storybook/react": "^8.0.0",
+    "@storybook/test": "8.0.0",
     "@storybook/testing-library": "^0.2.2",
     "@storybook/theming": "^8.0.0",
-    "@types/node": "^20.11.30",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "@types/vhtml": "^2.2.4",
@@ -103,9 +101,9 @@
     "eslint-config-next": "^14.2.3",
     "eslint-plugin-storybook": "^0.8.0",
     "msw": "1.3.2",
-    "next-sitemap": "^4.2.2",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
+    "sitemap": "^7.1.1",
     "storybook": "^8.0.0",
     "tailwindcss": "^3.3.3",
     "typescript": "5.0.4"
