--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 18
           cache: "yarn"
 
-      - run: yarn install --frozen-lockfile
+      - run: yarn install
 
       - name: Install Playwright
         run: npx playwright install --with-deps chromium
@@ -69,8 +69,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: "yarn"
+
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Download blob reports from GitHub Actions Artifacts
         uses: actions/download-artifact@v4
