--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,6 +11,12 @@ jobs:
         shardIndex: [1, 2, 3, 4]
         shardTotal: [4]
     if: github.event.deployment_status.state == 'success'
+
+    # Available throughout the whle workflow
+    env:
+      NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ env.NEXT_PUBLIC_SANITY_PROJECT_ID }} # Same as per site's Sanity project ID
+      NEXT_PUBLIC_SANITY_STUDIO_IN_CSTUDIO: ${{ env.NEXT_PUBLIC_SANITY_STUDIO_IN_CSTUDIO }} # Determines whether site is in CStudio, updated accordingly
+
     steps:
       - uses: actions/checkout@v4
 
@@ -29,8 +35,6 @@ jobs:
           PLAYWRIGHT_TEST_BASE_URL: ${{ github.event.deployment_status.target_url }} # dynamically generated and unique per build
           NEXT_PUBLIC_PREVIEW_SECRET: ${{ secrets.NEXT_PUBLIC_PREVIEW_SECRET }} # used for launching site preview in sites - same as per site's NEXT_PUBLIC_PREVIEW_SECRET in environment variables in Netlify/Vercel
           STUDIO_AUTOLOGIN_TOKEN_FOR_TESTING: ${{ secrets.STUDIO_AUTOLOGIN_TOKEN_FOR_TESTING }} # A unique API token generated on creation of project and added here one-time.
-          NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ env.NEXT_PUBLIC_SANITY_PROJECT_ID }} # Same as per site's Sanity project ID
-          NEXT_PUBLIC_SANITY_STUDIO_IN_CSTUDIO: ${{ env.NEXT_PUBLIC_SANITY_STUDIO_IN_CSTUDIO }} # Determines whether site is in CStudio, updated accordingly
 
       - name: Upload blob report to GitHub Actions Artifacts
         if: ${{ !cancelled() }}
