--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "lodash": "^4.17.21",
     "marked": "^4.3.0",
     "nanoid": "^3.1.30",
-    "next": "13.4.19",
+    "next": "13",
     "next-sanity": "4.3.3",
     "polished": "^4.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
     "sanity": "^3.17.0",
@@ -61,12 +61,12 @@
     "swiper": "^10.2.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.40.1",
+    "@netlify/plugin-nextjs": "^5.3.1",
     "@types/react": "^18.2.0",
     "@types/vhtml": "^2.2.4",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.39.0",
-    "eslint-config-next": "^13.4.4",
+    "eslint-config-next": "13",
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
