--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,8 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shardIndex: [1, 2, 3, 4, 5, 6, 7, 8]
-        shardTotal: [8]
+        shardIndex: [1, 2]
+        shardTotal: [2]
     if: github.event.deployment_status.state == 'success'
     steps:
       - uses: actions/checkout@v4
