--- a/package.json
+++ b/package.json
@@ -33,53 +33,53 @@
     "@sanity/types": "^3.17.0",
     "@sanity/ui": "^2.8.9",
     "@sanity/vision": "^3.17.0",
-    "@stackshift-ui/app-promo": "^6.0.5",
-    "@stackshift-ui/blog": "^6.0.8",
-    "@stackshift-ui/button": "^6.0.4",
-    "@stackshift-ui/call-to-action": "^6.0.7",
-    "@stackshift-ui/contact": "^6.0.6",
-    "@stackshift-ui/container": "^6.0.4",
-    "@stackshift-ui/cookies": "^6.0.5",
-    "@stackshift-ui/faqs": "^6.0.7",
-    "@stackshift-ui/features": "^6.0.6",
-    "@stackshift-ui/flex": "^6.0.4",
-    "@stackshift-ui/footer": "^6.0.6",
-    "@stackshift-ui/form-field": "^6.0.6",
-    "@stackshift-ui/grid": "^6.0.4",
-    "@stackshift-ui/header": "^6.0.8",
-    "@stackshift-ui/heading": "^6.0.4",
-    "@stackshift-ui/how-it-works": "^6.0.5",
-    "@stackshift-ui/image": "^6.0.4",
-    "@stackshift-ui/input": "^6.0.5",
-    "@stackshift-ui/link": "^6.0.4",
-    "@stackshift-ui/logo-cloud": "^6.0.7",
-    "@stackshift-ui/navigation": "^6.0.6",
-    "@stackshift-ui/newsletter": "^6.0.5",
-    "@stackshift-ui/portfolio": "^6.0.6",
-    "@stackshift-ui/section": "^6.0.4",
-    "@stackshift-ui/signin-signup": "^6.0.7",
-    "@stackshift-ui/statistics": "^6.0.6",
-    "@stackshift-ui/swiper-pagination": "^6.0.4",
-    "@stackshift-ui/system": "^6.0.4",
-    "@stackshift-ui/team": "^6.0.7",
-    "@stackshift-ui/testimonial": "^6.0.6",
-    "@stackshift-ui/text": "^6.0.4",
-    "@stackshift-ui/text-component": "^6.0.6",
-    "@stackshift-ui/webriq-form": "^6.0.4",
+    "@stackshift-ui/app-promo": "^6.0.5-beta.2",
+    "@stackshift-ui/blog": "^6.0.8-beta.2",
+    "@stackshift-ui/button": "^6.0.4-beta.2",
+    "@stackshift-ui/call-to-action": "^6.0.7-beta.2",
+    "@stackshift-ui/contact": "^6.0.6-beta.2",
+    "@stackshift-ui/container": "^6.0.4-beta.2",
+    "@stackshift-ui/cookies": "^6.0.5-beta.2",
+    "@stackshift-ui/faqs": "^6.0.7-beta.3",
+    "@stackshift-ui/features": "^6.0.6-beta.3",
+    "@stackshift-ui/flex": "^6.0.4-beta.2",
+    "@stackshift-ui/footer": "^6.0.6-beta.2",
+    "@stackshift-ui/form-field": "^6.0.6-beta.2",
+    "@stackshift-ui/grid": "^6.0.4-beta.2",
+    "@stackshift-ui/header": "^6.0.8-beta.2",
+    "@stackshift-ui/heading": "^6.0.4-beta.2",
+    "@stackshift-ui/how-it-works": "^6.0.5-beta.3",
+    "@stackshift-ui/image": "^6.0.4-beta.2",
+    "@stackshift-ui/input": "^6.0.5-beta.2",
+    "@stackshift-ui/link": "^6.0.4-beta.2",
+    "@stackshift-ui/logo-cloud": "^6.0.7-beta.2",
+    "@stackshift-ui/navigation": "^6.0.6-beta.2",
+    "@stackshift-ui/newsletter": "^6.0.5-beta.2",
+    "@stackshift-ui/portfolio": "^6.0.6-beta.3",
+    "@stackshift-ui/section": "^6.0.4-beta.2",
+    "@stackshift-ui/signin-signup": "^6.0.7-beta.2",
+    "@stackshift-ui/statistics": "^6.0.6-beta.2",
+    "@stackshift-ui/swiper-pagination": "^6.0.4-beta.2",
+    "@stackshift-ui/system": "^6.0.4-beta.2",
+    "@stackshift-ui/team": "^6.0.7-beta.2",
+    "@stackshift-ui/testimonial": "^6.0.6-beta.2",
+    "@stackshift-ui/text": "^6.0.4-beta.2",
+    "@stackshift-ui/text-component": "^6.0.6-beta.2",
+    "@stackshift-ui/webriq-form": "^6.0.4-beta.2",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^4.8.0",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^6.0.8",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^6.0.8",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^6.0.8-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^6.0.8-rc.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "classnames": "^2.5.1",
