--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "lint": "next lint",
     "start": "next start",
     "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag @webriq-pagebuilder/sanity-plugin-input-component-social-accounts@$ctag",
@@ -96,16 +96,16 @@
     "marked": "^14.1.2",
     "msw-storybook-addon": "1.10.0",
     "nanoid": "3.1.30",
-    "next": "^14.1.3",
+    "next": "15.3.5",
     "next-sanity": "4.3.3",
     "node-fetch": "^3.3.2",
     "polished": "^4.2.2",
-    "react": "^18.2.0",
+    "react": "18.3.1",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.3.1",
     "react-error-boundary": "^4.1.1",
     "react-icons": "^5.5.0",
-    "react-is": "^18.2.0",
+    "react-is": "18.3.1",
     "react-toast": "^1.0.3",
     "sanity": "^3.17.0",
     "sanity-plugin-iframe-pane": "2.6.1",
@@ -143,14 +143,14 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/theming": "^8.4.7",
     "@storybook/types": "^8.4.7",
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.21",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
     "@types/vhtml": "^2.2.4",
     "autoprefixer": "^10.4.20",
     "chromatic": "^11.0.8",
     "dotenv": "^16.4.7",
     "eslint": "^9.12.0",
-    "eslint-config-next": "14.1.3",
+    "eslint-config-next": "15.3.5",
     "eslint-plugin-storybook": "^0.11.2",
     "msw": "1.3.2",
     "plop": "^4.0.1",
@@ -161,5 +161,9 @@
     "tailwindcss": "^3.4.12",
     "typescript": "5.6.3"
   },
-  "packageManager": "yarn@1.22.21+sha512.ca75da26c00327d26267ce33536e5790f18ebd53266796fbb664d2a4a5116308042dd8ee7003b276a20eace7d3c5561c3577bdd71bcb67071187af124779620a"
+  "packageManager": "yarn@1.22.21+sha512.ca75da26c00327d26267ce33536e5790f18ebd53266796fbb664d2a4a5116308042dd8ee7003b276a20eace7d3c5561c3577bdd71bcb67071187af124779620a",
+  "resolutions": {
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1"
+  }
 }
